# airbnb_planner_multiagent

./: .env.example  .gitignore  README.md  README_CN.md  agent_control.sh  pyproject.toml
Tripadvisor_airbnb_planner_multiagent/: pyproject.toml
Tripadvisor_airbnb_planner_multiagent/airbnb_agent/: __main___new.py  agent_executor.py  airbnb_agent.py  airbnb_agent_new.py
Tripadvisor_airbnb_planner_multiagent/host_agent/: __main__.py  remote_agent_connection.py  routing_agent.py
Tripadvisor_airbnb_planner_multiagent/tripadvisor-mcp-server-main/: README.md  pyproject.toml  server.py
Tripadvisor_airbnb_planner_multiagent/tripadvisor_agent/: README.md  __init__.py  tripadvisor_agent.py  tripadvisor_executor.py
Tripadvisor_airbnb_planner_multiagent/weather_agent/: weather_mcp.py
airbnb_agent/: README.md  README_CN.md  __main__.py  agent_executor.py  airbnb_agent.py  auth_middleware.py  example copy.env
event_agent/: README.md  README_CN.md  event_agent.py  event_executor.py
finance_agent/: README.md  README_CN.md  __main__.py  finance_agent.py  finance_executor.py
flight_agent/: README.md  README_CN.md  __main__.py  flight_agent.py  flight_executor.py
host_agent/: README.md  README_CN.md  __main__.py  example.env  remote_agent_connection.py  routing_agent.py  test_agent_connection.py
hotel_agent/: README.md  README_CN.md  __main__.py  hotel_agent.py  hotel_executor.py
tripadvisor_agent/: README.md  README_CN.md  __main__.py  server.py  tripadvisor_agent.py
weather_agent/: README.md  README_CN.md  weather_agent.py  weather_mcp.py
(+9 files in other folders)
